--- a/www/index.html
+++ b/www/index.html
@@ -381,6 +381,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
              <br><br>  
                         <textarea id="e_note" name="e_note" placeholder="Please write your notes here..."></textarea>
                         <br><br>
+                        <div id="errorChk" style="font-size:16px; color:#399"></div>
 						<input type="submit" id="pSaveBtn" onClick="prescriptionSave()" style="width:100%; height:50px; background-color:#09C; color:#FFF; font-size:20px; margin-top:6px;" value="     Submit     "   />
 						    
 						<!--- view change start here --->
@@ -574,4 +575,4 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     
 </body>
 
-</html>
+</html>>>
