--- a/www/index.html
+++ b/www/index.html
@@ -340,7 +340,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!--//==============================Image Single Page=================-->
       
        <div class="view" id="imageSinglePageView">
-        <div class="pages">
+        <div class="pages" style="overflow:scroll">
          <header><h1 style="font-size:16px; font-weight:normal; background-color:#5EBBE8; color:#fff">eOusod</h1></header> 
             <div class="panel" id="imageSinglePage" style="background-color:#EDFEED">
             </br>
@@ -575,4 +575,4 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     
 </body>
 
-</html>>>
+</html>>>>
