--- a/www/index.html
+++ b/www/index.html
@@ -181,7 +181,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
                                               });
                                             })();
                                           </script>
-                                          
+                                       </section>   
                                           
                                    <!-- <img src="Penguins.jpg"  alt="Image" height="500px" style="width:100%; "  id="myImage1">-->
 										<!--<img    style="width:100%; height:300px" alt="" id="myImage1">-->
